changelog/v1.19.15/version-summary.md
<!-- @formatter:off -->
<!-- noinspection -->
<!-- Prevents auto format, for JetBrains IDE File > Settings > Editor > Code Style (Formatter Tab) > Turn formatter on/off with markers in code comments  -->

<!-- This file is automatically generate by logchange tool 🌳 🪓 => 🪵 -->
<!-- Visit https://github.com/logchange/logchange and leave a star 🌟 -->
<!-- !!! ⚠️ DO NOT MODIFY THIS FILE, YOUR CHANGES WILL BE LOST ⚠️ !!! -->


[1.19.15] - 2026-05-13
----------------------

### Dependency updates (22 changes)

- Upgraded actions/github-script from v8 to v9 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded codecov/codecov-action from v5 to v6 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded com.fasterxml.jackson.core:jackson-databind from 2.21.1 to 2.21.3 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded com.fasterxml.jackson.dataformat:jackson-dataformat-yaml from 2.21.1 to 2.21.3 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded gradle/gradle from v8.14.4 to v8.14.5 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded logchange/valhalla from 1.13.3 to 1.13.4 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded org.apache.groovy:groovy-all from 5.0.4 to 5.0.6 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded org.apache.maven:maven-artifact from 3.9.13 to 3.9.14 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded org.apache.maven:maven-artifact from 3.9.14 to 3.9.15 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded org.apache.maven:maven-core from 3.9.13 to 3.9.14 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded org.apache.maven:maven-core from 3.9.14 to 3.9.15 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded org.apache.maven:maven-plugin-api from 3.9.13 to 3.9.14 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded org.apache.maven:maven-plugin-api from 3.9.14 to 3.9.15 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded org.graalvm.nativeimage:svm from 25.0.2 to 25.0.3 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded org.graalvm.sdk:graal-sdk from 25.0.2 to 25.0.3 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded org.mockito:mockito-core from 5.22.0 to 5.23.0 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded org.pitest:pitest-maven from 1.22.1 to 1.23.0 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded org.pitest:pitest-maven from 1.23.0 to 1.23.1 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded org.projectlombok:lombok from 1.18.42 to 1.18.44 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded renovatebot/github-action from v46.1.5 to v46.1.14 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded renovatebot/github-action from v46.1.4 to v46.1.5 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded softprops/action-gh-release from v2 to v3 ([logchange-bot](team@logchange.dev) @logchange-bot)


