changelog/v1.19.16/version-summary.md
<!-- @formatter:off -->
<!-- noinspection -->
<!-- Prevents auto format, for JetBrains IDE File > Settings > Editor > Code Style (Formatter Tab) > Turn formatter on/off with markers in code comments  -->

<!-- This file is automatically generate by logchange tool 🌳 🪓 => 🪵 -->
<!-- Visit https://github.com/logchange/logchange and leave a star 🌟 -->
<!-- !!! ⚠️ DO NOT MODIFY THIS FILE, YOUR CHANGES WILL BE LOST ⚠️ !!! -->


[1.19.16] - 2026-08-16
----------------------

### Added (1 change)

- Added entry.banner option in logchange-config.yml, which allows to disable comment (banner) added at the top of every new entry created by add and example command 

### Dependency updates (29 changes)

- Upgraded codecov/codecov-action from v6.0.2 to v7.0.0 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded com.fasterxml.jackson.core:jackson-databind from 2.21.3 to 2.21.4 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded com.fasterxml.jackson.core:jackson-databind from 2.21.4 to 2.21.5 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded com.fasterxml.jackson.core:jackson-databind from 2.21.4 to 2.22.1 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded com.fasterxml.jackson.dataformat:jackson-dataformat-yaml from 2.21.4 to 2.22.1 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded com.google.cloud.tools:jib-maven-plugin from 3.5.1 to 3.5.2 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded com.hubspot.jinjava:jinjava from 2.8.3 to 2.8.4 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded com.squareup.okhttp3:mockwebserver from 5.3.2 to 5.4.0 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded commons-io:commons-io from 2.21.0 to 2.22.0 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded logchange/valhalla from 1.13.4 to 1.13.6 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded logchange/valhalla from 1.13.6 to 1.13.8 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded org.apache.groovy:groovy-all from 5.0.6 to 5.0.8 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded org.apache.groovy:groovy-all from 5.0.8 to 5.1.0 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded org.apache.maven:maven-artifact from 3.9.15 to 3.9.16 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded org.apache.maven:maven-core from 3.9.15 to 3.9.16 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded org.apache.maven:maven-plugin-api from 3.9.15 to 3.9.16 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded org.apache.maven.plugins:maven-failsafe-plugin from 3.5.5 to 3.5.6 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded org.apache.maven.plugins:maven-site-plugin from 3.21.0 to 3.22.0 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded org.apache.maven.plugins:maven-surefire-plugin from 3.5.5 to 3.5.6 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded org.jacoco:jacoco-maven-plugin from 0.8.14 to 0.8.15 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded org.junit.jupiter:junit-jupiter from 6.0.3 to 6.1.0 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded org.junit.jupiter:junit-jupiter from 6.1.0 to 6.1.3 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded org.pitest:pitest-maven from 1.23.1 to 1.24.1 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded org.pitest:pitest-maven from 1.24.1 to 1.25.9 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded org.projectlombok:lombok from 1.18.44 to 1.18.46 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded org.slf4j:slf4j-api from 2.0.17 to 2.0.18 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded org.sonatype.central:central-publishing-maven-plugin from 0.10.0 to 0.11.0 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded org.xmlunit:xmlunit-assertj3 from 2.11.0 to 2.13.0 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded renovatebot/github-action from v46.1.14 to v46.2.2 ([logchange-bot](team@logchange.dev) @logchange-bot)

### Configuration changes

| Type: logchange-config.yml                                                                                                                                          |
| ------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| <ul><li>Added `entry.banner` with default value: `true`</li><li>Description: Set to false to create entries without the 3 line comment at the top of file</li></ul> |


